fix: useless scrollbar removed

--- a/app/component/stop.scss
+++ b/app/component/stop.scss
@@ -9,6 +9,7 @@
   flex-direction: column;
   height: 100%;
   position: relative;
+  overflow: hidden;
   background-color: white;
 
   @media print {
